--- a/index.html
+++ b/index.html
@@ -11,11 +11,19 @@
             href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
             rel="stylesheet"
         />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+            integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
         <link rel="stylesheet" href="./css/styles.css" />
     </head>
     <body>
-        <header>
-            <nav>
+        <header class="header">
+            <div class="container header-container">
+            <nav class="header-navigation">
                 <a href="./index.html" class="header-logo link"
                     >Web<span class="header-logo-accent">Studio</span></a
                 >
@@ -61,52 +69,61 @@
                     </li>
                 </ul>
             </address>
+            </div>
         </header>
         <main>
             <section class="hero">
+                <div class="container hero-container">
                 <h1 class="hero-title">
                     Effective Solutions for Your Business
                 </h1>
                 <button type="button" class="hero-btn">Order Service</button>
+                </div>
             </section>
             <section class="advantages">
-                <h2 hidden>Advantages</h2>
-                <ul class="advantages-list list">
-                    <li class="advantages-menu">
-                        <h3 class="advantages-subtitle">Strategy</h3>
-                        <p class="advantages-item-text">
-                            Our goal is to identify the business problem to walk
-                            away with the perfect and creative solution.
-                        </p>
-                    </li>
-                    <li class="advantages-menu">
-                        <h3 class="advantages-subtitle">Punctuality</h3>
-                        <p class="advantages-item-text">
-                            Bring the key message to the brand's audience for
-                            the best price within the shortest possible time.
-                        </p>
-                    </li>
-                    <li class="advantages-menu">
-                        <h3 class="advantages-subtitle">Diligence</h3>
-                        <p class="advantages-item-text">
-                            Research and confirm brands that present the
-                            strongest digital growth opportunities and minimize
-                            risk.
-                        </p>
-                    </li>
-                    <li class="advantages-menu">
-                        <h3 class="advantages-subtitle">Technologies</h3>
-                        <p class="advantages-item-text">
-                            Design practice focused on digital experiences. We
-                            bring forth a deep passion for problem-solving.
-                        </p>
-                    </li>
-                </ul>
+                <div class="container">
+                    <h2 hidden>Advantages</h2>
+                    <ul class="advantages-list list">
+                        <li class="advantages-menu">
+                            <h3 class="advantages-subtitle">Strategy</h3>
+                            <p class="advantages-item-text">
+                                Our goal is to identify the business problem to
+                                walk away with the perfect and creative
+                                solution.
+                            </p>
+                        </li>
+                        <li class="advantages-menu">
+                            <h3 class="advantages-subtitle">Punctuality</h3>
+                            <p class="advantages-item-text">
+                                Bring the key message to the brand's audience
+                                for the best price within the shortest possible
+                                time.
+                            </p>
+                        </li>
+                        <li class="advantages-menu">
+                            <h3 class="advantages-subtitle">Diligence</h3>
+                            <p class="advantages-item-text">
+                                Research and confirm brands that present the
+                                strongest digital growth opportunities and
+                                minimize risk.
+                            </p>
+                        </li>
+                        <li class="advantages-menu">
+                            <h3 class="advantages-subtitle">Technologies</h3>
+                            <p class="advantages-item-text">
+                                Design practice focused on digital experiences.
+                                We bring forth a deep passion for
+                                problem-solving.
+                            </p>
+                        </li>
+                    </ul>
+                </div>
             </section>
             <section class="work">
+                <div class="container">
                 <h2 class="work-title section-title">What are we doing</h2>
                 <ul class="work-list list">
-                    <li>
+                    <li class="work-menu">
                         <img
                             src="./images/computer.jpg"
                             alt="computer"
@@ -114,7 +131,7 @@
                             height="300"
                         />
                     </li>
-                    <li>
+                    <li class="work-menu">
                         <img
                             src="./images/programms.jpg"
                             alt="programms"
@@ -122,7 +139,7 @@
                             height="300"
                         />
                     </li>
-                    <li>
+                    <li class="work-menu">
                         <img
                             src="./images/phone.jpg"
                             alt="phone"
@@ -132,7 +149,9 @@
                     </li>
                 </ul>
             </section>
+            </div>
             <section class="team">
+                <div class="container">
                 <h2 class="section-title">Our Team</h2>
                 <ul class="team-list list">
                     <li class="team-lead">
@@ -142,8 +161,10 @@
                             width="264"
                             height="260"
                         />
+                        <div class="card-content">
                         <h3 class="team-members">Mark Guerrero</h3>
                         <p class="team-members-position">Product Designer</p>
+                        </div>
                     </li>
                     <li class="team-lead">
                         <img
@@ -152,8 +173,10 @@
                             width="264"
                             height="260"
                         />
+                        <div class="card-content">
                         <h3 class="team-members">Tom Ford</h3>
                         <p class="team-members-position">Frontend Developer</p>
+                        </div>
                     </li>
                     <li class="team-lead">
                         <img
@@ -162,8 +185,10 @@
                             width="264"
                             height="260"
                         />
+                        <div class="card-content">
                         <h3 class="team-members">Camila Garcia</h3>
                         <p class="team-members-position">Marketing</p>
+                        </div>
                     </li>
                     <li class="team-lead">
                         <img
@@ -172,20 +197,25 @@
                             width="264"
                             height="260"
                         />
+                        <div class="card-content">
                         <h3 class="team-members">Daniel Wilson</h3>
                         <p class="team-members-position">UI Designer</p>
+                        </div>
                     </li>
                 </ul>
+                </div>
             </section>
         </main>
         <footer class="footer">
-            <a href="./index.html" class="footer-logo link"
+            <div class="container footer-cont">
+            <a href="./index.html" class="footer-logotype link"
                 >Web<span class="footer-logo-accent">Studio</span></a
             >
             <p class="footer-text">
                 Increase the flow of customers and sales for your business with
                 digital marketing & growth solutions.
             </p>
+            </div>
         </footer>
     </body>
 </html>
