--- a/index.html
+++ b/index.html
@@ -23,66 +23,70 @@
     <body>
         <header class="header">
             <div class="container header-container">
-            <nav class="header-navigation">
-                <a href="./index.html" class="header-logo link"
-                    >Web<span class="header-logo-accent">Studio</span></a
-                >
-                <ul class="header-menu-list list">
-                    <li class="header-menu">
-                        <a
-                            class="header-menu-link link header-focus"
-                            href="./index.html"
-                            >Studio</a
-                        >
-                    </li>
-                    <li class="header-menu">
-                        <a
-                            class="header-menu-link link header-focus"
-                            href="./portfolio.html"
-                            >Portfolio</a
-                        >
-                    </li>
-                    <li class="header-menu">
-                        <a class="header-menu-link link header-focus" href=""
-                            >Contacts</a
-                        >
-                    </li>
-                </ul>
-            </nav>
-            <address class="adress-lnk">
-                <ul class="header-social-list list">
-                    <li class="header-social-menu">
-                        <a
-                            class="header-social-link link header-focus header-adress"
-                            href="mailto:info@devstudio.com"
-                            rel="noopener noreferrer"
-                            >info@devstudio.com</a
-                        >
-                    </li>
-                    <li class="header-social-menu">
-                        <a
-                            class="header-social-link link header-focus header-adress"
-                            href="tel:+110001111111"
-                            rel="noopener noreferrer"
-                            >+11 (000) 111-11-11</a
-                        >
-                    </li>
-                </ul>
-            </address>
+                <nav class="header-navigation">
+                    <a href="./index.html" class="header-logo link"
+                        >Web<span class="header-logo-accent">Studio</span></a
+                    >
+                    <ul class="header-menu-list list">
+                        <li class="header-menu">
+                            <a
+                                class="header-menu-link link header-focus"
+                                href="./index.html"
+                                >Studio</a
+                            >
+                        </li>
+                        <li class="header-menu">
+                            <a
+                                class="header-menu-link link header-focus"
+                                href="./portfolio.html"
+                                >Portfolio</a
+                            >
+                        </li>
+                        <li class="header-menu">
+                            <a
+                                class="header-menu-link link header-focus"
+                                href=""
+                                >Contacts</a
+                            >
+                        </li>
+                    </ul>
+                </nav>
+                <address class="adress-lnk">
+                    <ul class="header-social-list list">
+                        <li class="header-social-menu">
+                            <a
+                                class="header-social-link link header-focus header-adress"
+                                href="mailto:info@devstudio.com"
+                                rel="noopener noreferrer"
+                                >info@devstudio.com</a
+                            >
+                        </li>
+                        <li class="header-social-menu">
+                            <a
+                                class="header-social-link link header-focus header-adress"
+                                href="tel:+110001111111"
+                                rel="noopener noreferrer"
+                                >+11 (000) 111-11-11</a
+                            >
+                        </li>
+                    </ul>
+                </address>
             </div>
         </header>
         <main>
             <section class="hero">
                 <div class="container hero-container">
-                <h1 class="hero-title">
-                    Effective Solutions for Your Business
-                </h1>
-                <button type="button" class="hero-btn">Order Service</button>
+                    <h1 class="hero-title">
+                        Effective Solutions for Your Business
+                    </h1>
+                    <button type="button" class="hero-btn">
+                        Order Service
+                    </button>
                 </div>
             </section>
             <section class="advantages">
                 <div class="container">
-                    <h2 hidden>Advantages</h2>
+                    <h2 class="visual-hidden">Advantages</h2>
                     <ul class="advantages-list list">
                         <li class="advantages-menu">
                             <h3 class="advantages-subtitle">Strategy</h3>
@@ -121,100 +125,108 @@
             </section>
             <section class="work">
                 <div class="container">
-                <h2 class="work-title section-title">What are we doing</h2>
-                <ul class="work-list list">
-                    <li class="work-menu">
-                        <img
-                            src="./images/computer.jpg"
-                            alt="computer"
-                            width="360"
-                            height="300"
-                        />
-                    </li>
-                    <li class="work-menu">
-                        <img
-                            src="./images/programms.jpg"
-                            alt="programms"
-                            width="360"
-                            height="300"
-                        />
-                    </li>
-                    <li class="work-menu">
-                        <img
-                            src="./images/phone.jpg"
-                            alt="phone"
-                            width="360"
-                            height="300"
-                        />
-                    </li>
-                </ul>
+                    <h2 class="work-title section-title">What are we doing</h2>
+                    <ul class="work-list list">
+                        <li class="work-menu">
+                            <img
+                                src="./images/computer.jpg"
+                                alt="computer"
+                                width="360"
+                                height="300"
+                            />
+                        </li>
+                        <li class="work-menu">
+                            <img
+                                src="./images/programms.jpg"
+                                alt="programms"
+                                width="360"
+                                height="300"
+                            />
+                        </li>
+                        <li class="work-menu">
+                            <img
+                                src="./images/phone.jpg"
+                                alt="phone"
+                                width="360"
+                                height="300"
+                            />
+                        </li>
+                    </ul>
+                </div>
             </section>
-            </div>
             <section class="team">
-                <div class="container">
-                <h2 class="section-title">Our Team</h2>
-                <ul class="team-list list">
-                    <li class="team-lead">
-                        <img
-                            src="./images/mark.jpg"
-                            alt="mark"
-                            width="264"
-                            height="260"
-                        />
-                        <div class="card-content">
-                        <h3 class="team-members">Mark Guerrero</h3>
-                        <p class="team-members-position">Product Designer</p>
-                        </div>
-                    </li>
-                    <li class="team-lead">
-                        <img
-                            src="./images/tom.jpg"
-                            alt="tom"
-                            width="264"
-                            height="260"
-                        />
-                        <div class="card-content">
-                        <h3 class="team-members">Tom Ford</h3>
-                        <p class="team-members-position">Frontend Developer</p>
-                        </div>
-                    </li>
-                    <li class="team-lead">
-                        <img
-                            src="./images/camilla.jpg"
-                            alt="camilla"
-                            width="264"
-                            height="260"
-                        />
-                        <div class="card-content">
-                        <h3 class="team-members">Camila Garcia</h3>
-                        <p class="team-members-position">Marketing</p>
-                        </div>
-                    </li>
-                    <li class="team-lead">
-                        <img
-                            src="./images/daniel.jpg"
-                            alt="daniel"
-                            width="264"
-                            height="260"
-                        />
-                        <div class="card-content">
-                        <h3 class="team-members">Daniel Wilson</h3>
-                        <p class="team-members-position">UI Designer</p>
-                        </div>
-                    </li>
-                </ul>
+                <div class="container team-class">
+                    <h2 class="section-title">Our Team</h2>
+                    <ul class="team-list list">
+                        <li class="team-lead">
+                            <img
+                                class="team-image"
+                                src="./images/mark.jpg"
+                                alt="mark"
+                                width="264"
+                                height="260"
+                            />
+                            <div class="card-content">
+                                <h3 class="team-members">Mark Guerrero</h3>
+                                <p class="team-members-position">
+                                    Product Designer
+                                </p>
+                            </div>
+                        </li>
+                        <li class="team-lead">
+                            <img
+                                class="team-image"
+                                src="./images/tom.jpg"
+                                alt="tom"
+                                width="264"
+                                height="260"
+                            />
+                            <div class="card-content">
+                                <h3 class="team-members">Tom Ford</h3>
+                                <p class="team-members-position">
+                                    Frontend Developer
+                                </p>
+                            </div>
+                        </li>
+                        <li class="team-lead">
+                            <img
+                                class="team-image"
+                                src="./images/camilla.jpg"
+                                alt="camilla"
+                                width="264"
+                                height="260"
+                            />
+                            <div class="card-content">
+                                <h3 class="team-members">Camila Garcia</h3>
+                                <p class="team-members-position">Marketing</p>
+                            </div>
+                        </li>
+                        <li class="team-lead">
+                            <img
+                                class="team-image"
+                                src="./images/daniel.jpg"
+                                alt="daniel"
+                                width="264"
+                                height="260"
+                            />
+                            <div class="card-content">
+                                <h3 class="team-members">Daniel Wilson</h3>
+                                <p class="team-members-position">UI Designer</p>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
             </section>
         </main>
         <footer class="footer">
             <div class="container footer-cont">
-            <a href="./index.html" class="footer-logotype link"
-                >Web<span class="footer-logo-accent">Studio</span></a
-            >
-            <p class="footer-text">
-                Increase the flow of customers and sales for your business with
-                digital marketing & growth solutions.
-            </p>
+                <a href="./index.html" class="footer-logotype link"
+                    >Web<span class="footer-logo-accent">Studio</span></a
+                >
+                <p class="footer-text">
+                    Increase the flow of customers and sales for your business
+                    with digital marketing & growth solutions.
+                </p>
             </div>
         </footer>
     </body>
