--- a/portfolio.html
+++ b/portfolio.html
@@ -105,7 +105,7 @@
                         </li>
                     </ul>
                     <ul class="list port-menu">
-                        <li class="portfolio-item link">
+                        <li class="portfolio-item">
                             <a href="" class="link">
                                 <img
                                     class="image-list"
