--- a/portfolio.html
+++ b/portfolio.html
@@ -25,26 +25,26 @@
             <div class="container header-container">
                 <nav class="header-navigation">
                     <a href="./index.html" class="header-logo link"
-                        >Web<span class="header-logo-accent">Studio</span>
-                    </a>
+                        >Web<span class="header-logo-accent">Studio</span></a
+                    >
                     <ul class="header-menu-list list">
-                        <li class="header-menu link">
+                        <li class="header-menu">
                             <a
-                                class="header-menu-link link list header-focus"
+                                class="header-menu-link link header-focus"
                                 href="./index.html"
                                 >Studio</a
                             >
                         </li>
-                        <li class="header-menu list">
+                        <li class="header-menu">
                             <a
-                                class="header-menu-link link list header-focus"
+                                class="header-menu-link link header-focus"
                                 href="./portfolio.html"
                                 >Portfolio</a
                             >
                         </li>
                         <li class="header-menu">
                             <a
-                                class="header-menu-link link list header-focus"
+                                class="header-menu-link link header-focus"
                                 href=""
                                 >Contacts</a
                             >
@@ -55,19 +55,19 @@
                     <ul class="header-social-list list">
                         <li class="header-social-menu">
                             <a
-                                class="header-social-link link header-focus"
+                                class="header-social-link link header-focus header-adress"
                                 href="mailto:info@devstudio.com"
                                 rel="noopener noreferrer"
-                                >info@devstudio.com
-                            </a>
+                                >info@devstudio.com</a
+                            >
                         </li>
                         <li class="header-social-menu">
                             <a
-                                class="header-social-link link header-focus"
+                                class="header-social-link link header-focus header-adress"
                                 href="tel:+110001111111"
                                 rel="noopener noreferrer"
-                                >+11 (000) 111-11-11
-                            </a>
+                                >+11 (000) 111-11-11</a
+                            >
                         </li>
                     </ul>
                 </address>
