--- a/portfolio.html
+++ b/portfolio.html
@@ -76,7 +76,7 @@
         <main>
             <section class="portfolio-main">
                 <div class="container">
-                    <h1 hidden>Portfolio</h1>
+                    <h1 class=".visual-hidden">Portfolio</h1>
                     <ul class="portfolio-btn-list list">
                         <li class="portfolio-list">
                             <button class="portfolio-btn" type="button">
