--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
                     <ul class="work-list list">
                         <li class="work-menu">
                             <img
+                                class="team-image"
                                 src="./images/computer.jpg"
                                 alt="computer"
                                 width="360"
@@ -137,6 +138,7 @@
                         </li>
                         <li class="work-menu">
                             <img
+                                class="team-image"
                                 src="./images/programms.jpg"
                                 alt="programms"
                                 width="360"
@@ -145,6 +147,7 @@
                         </li>
                         <li class="work-menu">
                             <img
+                                class="team-image"
                                 src="./images/phone.jpg"
                                 alt="phone"
                                 width="360"
